# cortex

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/research/: ai-driven-terminal-research.md
docs/walkthrough/: cortex-analysis-v2-phase1.json  cortex-analysis-v3-final.json  cortex-decisions-v2-phase1.md  cortex-decisions-v3-final.md  cortex-decisions.md  cortex-overview-v2-phase1.html  cortex-overview-v2-phase1.md  cortex-overview-v3-final.html  cortex-overview-v3-final.md  cortex-overview.html  cortex-overview.md  cortex-walkthrough-v2-phase1.md  cortex-walkthrough-v3-final.md  cortex-walkthrough.md
docs/walkthrough/diagrams/: component-boundary.mmd  data-flow-ai-translation.mmd  data-flow-command.mmd  data-flow-pty-error.mmd  data-model.mmd  hexagonal-architecture.mmd  system-context.mmd  technology-stack.mmd  v2-ai-streaming-flow.mmd  v2-frontend-components.mmd  v2-hexagonal-actual.mmd  v2-implementation-status.mmd  v2-ipc-events.mmd  v2-pty-data-flow.mmd  v2-rust-modules.mmd  v2-system-context.mmd  v3-component-hierarchy.mmd  v3-implementation-status.mmd  v3-ipc-map.mmd  (+4 more)
shell-integration/: bash-integration.sh  fish-integration.fish  zsh-integration.zsh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  config.rs  mod.rs  terminal.rs
src-tauri/src/domain/: context.rs  mod.rs  redaction.rs
src-tauri/src/ports/: claude_api.rs  mod.rs  pty.rs  storage.rs
src/hooks/: useTerminal.ts
src/lib/: tauri-bridge.ts  types.ts
src/stores/: aiStore.ts  terminalStore.ts
(+7 files in other folders)
