[package]
name = "ai-terminal"
version = "0.1.0"
description = "AI-driven terminal emulator with Claude integration"
authors = ["Andrea Laforgia"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
chrono = "0.4"
futures = "0.3"
thiserror = "1"
dirs-next = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
